# hello-c-cmake

./: 0compile.properties  hello-c-cmake.xml
src/: CMakeLists.txt
